# BaumerCamera

./: CMakeLists.txt  README.md  all_options_vcxu13.txt  build.sh  run.sh
include/baumer_camera/: BaumerCamera.hpp
old/: BaumerCamera.cpp  BaumerCamera.hpp
src/: BaumerCamera.cpp  TimeMeasuring.hpp
test/: CMakeLists.txt  baumer_camera.cpp
